# helix

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  plan.md
src/: cli.rs  crypto.rs  dna_mapper.rs  lib.rs  main.rs  oligo.rs  parallel.rs  rs_engine.rs  stream_manager.rs
tests/: benchmark_safety.py  chaos_mode.py  full_test.py  test100.sh
