[package]
name = "helix"
version = "1.0.0"
edition = "2021"
authors = ["Seuriin <github.com/SSL-ACTX>"]
description = "A Systems-Level DNA Storage Archiver"

[dependencies]
reed-solomon-erasure = "6.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
zstd = "0.13"
crc32fast = "1.3"
aes-gcm = "0.10"
rayon = "1.8"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
